--- a/css/style.css
+++ b/css/style.css
@@ -15,5 +15,19 @@
     background-color: rgb(186, 186, 223);
 }
 .bg-footer {
-    background-color: beige;
+    background-color: rgb(135, 202, 165);
+    font-size: medium;
+    margin: 10%;
+    color: white;
+    
+}
+.frase {
+    font-size: medium;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    
+    
+}
+.Leia {
+    background-color: rgb(125, 131, 131);
 }
